fixed overflow conflict and updated text

--- a/css/index.css
+++ b/css/index.css
@@ -89,6 +89,7 @@ h2 {
     background-color: rgba(255, 255, 255, 0.2);
     padding: 1rem 3rem;
     min-width: 25rem;
+    cursor: pointer;
 }
 
 .project img {
